# epoll_timer

./: CMakeLists.txt  LICENSE
include/: epoll_fd.h  epoll_fd.hpp  event_dispatcher.hpp
src/: epoll_fd.cpp  event_dispatcher.cpp  file_descriptor.cpp  file_descriptor.h  main.cpp
test/: test_suite.cpp
